# molDscript

./: .atom_level.csv.swp  .bond_level.csv.swp  .gitignore  .molecule_level.csv.swp  LICENSE  MANIFEST.in  README.md  SUPPORT.md  arguments.txt  arguments2.txt  atom_df.csv  atom_df_substructure.csv  atom_level.csv  boltzmann_atom_level.csv  boltzmann_molecular_level.csv  bond_df_substructure.csv  bond_level.csv  mol_df.csv  molecule_level.csv  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: release.yml
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
dftdescp/: __main__.py  argument_parser.py  boltz.py  dftdescp.py  files.py  fukui.py  get_df.py  get_properties_functions.py  ie_ea.py  main.py  min_max.py  nbo.py  nmr.py  opt.py  parameterizer.py  spc.py  substructure.py  utils.py
docs/: conf.py  index.rst
docs/source/: README.rst
examples/: atom_level.csv  bond_df.csv  bond_level.csv  molecule_level.csv
examples/sear/: .gitignore  README.md  analyze.py  arguments.txt  prepare_opt.py  prepare_singlepoints.py  substrates.csv
examples/temp/: atom_df_substructure.csv
moldscript/: __main__.py  argument_parser.py  boltz.py  charges.py  files.py  fmo.py  fukui.py  get_df.py  ie_ea.py  lowe.py  min_max.py  moldscript.py  nbo.py  nmr.py  opt.py  spc.py  sterics.py  substructure.py  tmp_test.ipynb  utils.py
moldscript.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
moldscript/.ipynb_checkpoints/: argument_parser-checkpoint.py  files-checkpoint.py  fukui-checkpoint.py  get_df-checkpoint.py  ie_ea-checkpoint.py  moldscript-checkpoint.py  nbo-checkpoint.py  nmr-checkpoint.py  opt-checkpoint.py  spc-checkpoint.py  (+3 more)
tests/: conftest.py  test_cli.py  test_ensembles.py  test_moldscript.py  test_orca.py
(+490 files in other folders)
