[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moldscript"
version = "0.1"
description = "Automated workflow for quantum-mechanical molecular descriptors from Gaussian, ORCA, and xTB outputs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Shree Sowndarya S. V.", email = "svss@colostate.edu" },
    { name = "Jake King", email = "jake.king@colostate.edu" },
    { name = "Robert Paton" },
]
keywords = [
    "molecular descriptors",
    "electronic parameters",
    "steric parameters",
    "workflow",
    "computational chemistry",
    "cheminformatics",
    "quantum mechanics",
    "DFT",
    "automated",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "pandas>=2.1.0",
    "cclib @ git+https://github.com/cclib/cclib.git",
    "dbstep",
    "rdkit",
    "networkx",
]

[project.urls]
Homepage = "https://github.com/patonlab/molDscript"
Repository = "https://github.com/patonlab/molDscript"
Issues = "https://github.com/patonlab/molDscript/issues"

[project.scripts]
moldscript = "moldscript.moldscript:main"

[tool.setuptools.packages.find]
include = ["moldscript*"]
exclude = ["tests*", "docs*", "_build*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
